crates/ui/tests/snapshots/panel_snapshots__agent_feed_audit_modal_loading.snap
---
source: crates/ui/tests/panel_snapshots.rs
assertion_line: 442
expression: tape_audit_modal_summary(&state)
---
panel: tape_audit_modal
title: Journal transaction
state: loading
tx_id: 4f9a2c1e-aaaa-bbbb-cccc-000000000001
close_label: Close
copy: Loading journal entries…
