crates/ui/tests/snapshots/panel_snapshots__agent_feed_loading.snap
---
source: crates/ui/tests/panel_snapshots.rs
expression: tape_summary(&c)
---
panel: agent_feed
title: Agent activity
state: loading
paused: false
copy: Connecting to the fill stream…
