crates/ui/tests/snapshots/panel_snapshots__agent_feed_ready_three_fills.snap
---
source: crates/ui/tests/panel_snapshots.rs
expression: tape_summary(&c)
---
panel: agent_feed
title: Agent activity
state: ready
paused: false
rows:
  2024-01-15 12:00:00.0 +00:00:00  BTCUSDT  Buy  40000.00  0.1
  2024-01-15 12:00:01.0 +00:00:00  BTCUSDT  Sell  40000.50  0.1
  2024-01-15 12:00:02.0 +00:00:00  BTCUSDT  Buy  40001.00  0.1
