crates/ui/tests/snapshots/panel_snapshots__cockpit_layout_strategies_above_positions.snap
---
source: crates/ui/tests/panel_snapshots.rs
expression: summary
---
layout: cockpit
left_column:
  - P&L
  - Feed latency
  - Stop trading
right_column:
  - Strategies
  - Open positions
  - Agent activity
strategies_state: ready
