crates/ui/tests/snapshots/panel_snapshots__kill_dialog_correct.snap
---
source: crates/ui/tests/panel_snapshots.rs
assertion_line: 235
expression: kill_summary(&c)
---
panel: kill
title: Stop trading
state: confirming
dialog_title: Confirm stop trading
dialog_body: This cancels every open order, sells each open position at market, and puts the agent into a halted state. Type the phrase below to confirm.
phrase_label: Type HALT BTC to confirm
typed: "HALT BTC"
matched: true
confirm_enabled: true
input_bg: PANEL_SUNKEN
input_hairline: shadow_inset
input_border: BORDER_2
input_focus_ring: none
confirm_label: Confirm stop
cancel_label: Cancel
